# FYP

./: .gitattributes  .gitignore  README.md  pyproject.toml  report.md  requirements.txt
.claude/: settings.local.json
data/stroke_taxonomy/: stroke_taxonomy.json
docs/: stroke-classification-solution.md
docs/superpowers/plans/: 2026-05-24-stroke-taxonomy-and-ocr-pipeline.md
docs/superpowers/specs/: 2026-05-24-calligraphy-ai-system-design.md
scripts/: assess_quality.py  build_taxonomy.py  download_data.py  test_camera.py
src/ocr/: pipeline.py  recognizer.py
src/quality/: assessor.py  pipeline.py  reference.py
src/stroke_taxonomy/: parser.py  stroke_names.py  taxonomy.py
tests/: test_download_data.py  test_parser.py  test_pipeline.py  test_quality.py  test_recognizer.py  test_taxonomy.py
